98. Re-fix MenuItem - Add Close-btn for WrapPopper - Add component ButtonIcon just display icon, can have description below icon. This component can reuse. - Add component Button. It can be auto switch to a or Link base on your pass props. Can reuse - Add props appendTo inside Tippy to delete warning.

--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,10 +1,18 @@
 .wrapper {
+    position: relative;
     width: var(--popper-width);
+    height: calc(100vh - 2px);
+    padding: 8px;
+
     border-left: 1px solid rgba(0, 0, 0, 0.12);
     border-right: 1px solid rgba(0, 0, 0, 0.12);
     background-color: var(--white-color);
-    height: calc(100vh - 2px);
-    padding: 8px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 8px;
+    right: 12px;
 }
 
 .title {
